--- a/devops.html
+++ b/devops.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.lever.co/socure/13e60382-1ae2-48a0-ad77-984ac20f9a2a'>Socure - Senior DevOps Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://orbitpeople.applytojob.com/apply/oHWBYGP2jX/AWSCloudDevOps-Engineer'>AWS/Cloud/DevOps Engineer - Orb IT People - Career Page</a></h5> 
@@ -144,7 +144,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -245,7 +245,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -346,7 +346,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://upvest.join.com/jobs/448241-senior-lead-devops-engineer-m-f-d-berlin'>Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upvest.join.com/jobs/448241-senior-lead-devops-engineer-m-f-d-berlin'>Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin  Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
